# cwru_deeplearning_robot

./: README.md
deeplearning_bringup/: CMakeLists.txt  package.xml
deeplearning_bringup/config/: graft.yaml
deeplearning_bringup/launch/: deeplearning.launch
deeplearning_bringup/launch/include/: depthimage_to_laser.launch.xml  description.launch.xml  graft.launch.xml  minimal_kobuki.launch.xml  pointcloud_to_laser.launch.xml  robot_pose_ekf.launch.xml  teleop.launch.xml
deeplearning_description/: CMakeLists.txt  README.md  package.xml  test.launch
deeplearning_description/robots/: kobuki_deeplearning01_cwru.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro
deeplearning_description/test/: test_urdf.cpp
deeplearning_description/urdf/: turtlebot_common_library.urdf.xacro  turtlebot_library.urdf.xacro
deeplearning_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  asus_xtion_pro_dl.urdf.xacro  asus_xtion_pro_offset.urdf.xacro
deeplearning_description/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
deeplearning_launch/: CMakeLists.txt  package.xml
deeplearning_launch/launch/: glennan2_office_amcl.launch  gmapping.launch
