<?xml version="1.0"?>
<package>
  <name>deeplearning_bringup</name>
  <version>0.0.1</version>
  <description>Robot bringup for the Deep Learning Robot</description>

  <maintainer email="bettaieb@case.edu">Luc Bettaieb</maintainer>
  <author email="luc.bettaieb@case.edu">Luc Bettaieb</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>kobuki</run_depend>
  <run_depend>deeplearning_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>slam_gmapping</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>teleop_twist_joy</run_depend>

</package>
